--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
   "env": {
 	  "token": {
 		  "description": "frp server token",
-		  "value": "123@qwe!"
+		  "value": "12345"
 	  },
 	  "server": {
 		  "description": "frp server ip",
